k8s/overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receipt-frontend-blue
spec:
  template:
    spec:
      containers:
      - name: receipt-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receipt-frontend-green
spec:
  template:
    spec:
      containers:
      - name: receipt-frontend
