k8s/overlays/prod/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: receipt-frontend-service
spec:
  selector:
    env: green  # Can be patched to blue during switches
