k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: receipt-frontend-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "34.135.155.239.nip.io"
    secretName: receipt-frontend-tls
  rules:
  - host: "34.135.155.239.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: receipt-frontend-service
            port:
              number: 80
